--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "astro": "^5.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
