--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
-  "type": "module",
-  "version": "0.0.1",
+  "name": "astro",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,15 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/alpinejs": "^0.4.8",
     "@astrojs/react": "^4.3.0",
     "@lucide/astro": "^0.525.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
-    "@types/alpinejs": "^3.13.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "alpinejs": "^3.14.9",
     "astro": "^5.12.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
