--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^4.3.0",
     "@lucide/astro": "^0.525.0",
     "@radix-ui/themes": "^3.2.1",
+    "@supabase/supabase-js": "^2.41.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
